# test_sealed

section1/question1/: Readme.md  solution.py  tests.py
section1/question2/: Readme.md  solution.py  tests.py
section2/: .coverage  .coveragerc  .flake8  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
section2/alembic/: env.py
section2/alembic/versions/: 01416a92830f_add_login_token_column_to_table_user.py  67ba8d6496c9_create_employee_table.py  cc71922459fe_create_user_table.py
section2/app/: __init__.py  db.py  main.py
section2/app/controllers/: __init__.py  router.py
section2/app/controllers/v1/: __init__.py  exceptions.py  responses.py  router.py
section2/app/controllers/v1/endpoints/: __init__.py  auth.py  employee.py  user.py
section2/app/models/: __init__.py  employee.py  user.py
section2/app/schemas/: __init__.py  employee.py  user.py
section2/app/tests/: README.md  __init__.py  db.py
section2/app/tests/controllers/: auth_spec.py  employee_spec.py  user_spec.py
section2/app/tests/factories/: __init__.py  employee_factory.py  user_factory.py
section2/scripts/: load_env.py  load_env.sh  run_local.sh  run_migration.sh  test_app.sh
